[gd_scene load_steps=4 format=3 uid="uid://lb2agmfchj8u"]

[ext_resource type="Script" uid="uid://c6bb677nas22n" path="res://boss_3.gd" id="1_b3p8e"]
[ext_resource type="Texture2D" uid="uid://b4cyuex63k58s" path="res://images/rackWithoutBubbleNew.png" id="2_b3p8e"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fmbb1"]
size = Vector2(192, 201)

[node name="Rack" type="Area2D"]
script = ExtResource("1_b3p8e")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 2)
shape = SubResource("RectangleShape2D_fmbb1")

[node name="Freaky" type="Sprite2D" parent="."]
position = Vector2(1, -7.62939e-06)
scale = Vector2(0.373047, 0.402498)
texture = ExtResource("2_b3p8e")

[node name="BossShotgunInterval" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="bulletShootinEverywhere" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="shootTowardsThePlayer" type="Timer" parent="."]
one_shot = true

[node name="BulletIntervalForRotator" type="Timer" parent="."]

[node name="Rotator" type="Node2D" parent="."]

[node name="Rotator2" type="Node2D" parent="."]

[node name="3Phaseattack" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="BossShotgunInterval" to="." method="_on_boss_shotgun_interval_timeout"]
[connection signal="timeout" from="bulletShootinEverywhere" to="." method="_on_bullet_shootin_everywhere_timeout"]
[connection signal="timeout" from="shootTowardsThePlayer" to="." method="_on_shoot_towards_the_player_timeout"]
[connection signal="timeout" from="BulletIntervalForRotator" to="." method="_on_bullet_interval_for_rotator_timeout"]
[connection signal="timeout" from="3Phaseattack" to="." method="_on_phaseattack_timeout"]
